// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Register renderAlert should match snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Register
    addUser={[Function]}
    history={
        Object {
            "push": [Function],
          }
    }
    loginUser={[Function]}
    user={
        Object {
            "email": "kindoffake@123.com",
            "id": 3,
            "name": "fred",
            "password1": "pw321",
            "password2": "pw321",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="page-title"
>
          GET STARTED
</h1>,
        <form
          className="register-form"
          onSubmit={[Function]}
>
          <div
                    className="input-container"
          >
                    <input
                              className="register-input"
                              name="name"
                              onChange={[Function]}
                              placeholder="NAME"
                              type="text"
                              value=""
                    />
                    <input
                              className="register-input"
                              name="email"
                              onChange={[Function]}
                              placeholder="EMAIL"
                              type="text"
                              value=""
                    />
                    <input
                              className="register-input user-password-1"
                              name="password1"
                              onChange={[Function]}
                              placeholder="PASSWORD"
                              type="text"
                              value=""
                    />
                    <input
                              className="register-input user-password-2"
                              name="password2"
                              onChange={[Function]}
                              placeholder="RETYPE PASSWORD"
                              type="text"
                              value=""
                    />
                    <button
                              className="register-button"
                    >
                              ENTER
                    </button>
          </div>
</form>,
        <p
          color="white"
>
          Alert message
</p>,
      ],
      "className": "register",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "GET STARTED",
          "className": "page-title",
        },
        "ref": null,
        "rendered": "GET STARTED",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="input-container"
>
            <input
                        className="register-input"
                        name="name"
                        onChange={[Function]}
                        placeholder="NAME"
                        type="text"
                        value=""
            />
            <input
                        className="register-input"
                        name="email"
                        onChange={[Function]}
                        placeholder="EMAIL"
                        type="text"
                        value=""
            />
            <input
                        className="register-input user-password-1"
                        name="password1"
                        onChange={[Function]}
                        placeholder="PASSWORD"
                        type="text"
                        value=""
            />
            <input
                        className="register-input user-password-2"
                        name="password2"
                        onChange={[Function]}
                        placeholder="RETYPE PASSWORD"
                        type="text"
                        value=""
            />
            <button
                        className="register-button"
            >
                        ENTER
            </button>
</div>,
          "className": "register-form",
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                className="register-input"
                name="name"
                onChange={[Function]}
                placeholder="NAME"
                type="text"
                value=""
/>,
              <input
                className="register-input"
                name="email"
                onChange={[Function]}
                placeholder="EMAIL"
                type="text"
                value=""
/>,
              <input
                className="register-input user-password-1"
                name="password1"
                onChange={[Function]}
                placeholder="PASSWORD"
                type="text"
                value=""
/>,
              <input
                className="register-input user-password-2"
                name="password2"
                onChange={[Function]}
                placeholder="RETYPE PASSWORD"
                type="text"
                value=""
/>,
              <button
                className="register-button"
>
                ENTER
</button>,
            ],
            "className": "input-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "register-input",
                "name": "name",
                "onChange": [Function],
                "placeholder": "NAME",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "register-input",
                "name": "email",
                "onChange": [Function],
                "placeholder": "EMAIL",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "register-input user-password-1",
                "name": "password1",
                "onChange": [Function],
                "placeholder": "PASSWORD",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "register-input user-password-2",
                "name": "password2",
                "onChange": [Function],
                "placeholder": "RETYPE PASSWORD",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "ENTER",
                "className": "register-button",
              },
              "ref": null,
              "rendered": "ENTER",
              "type": "button",
            },
          ],
          "type": "div",
        },
        "type": "form",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Alert message",
          "color": "white",
        },
        "ref": null,
        "rendered": "Alert message",
        "type": "p",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="page-title"
>
            GET STARTED
</h1>,
          <form
            className="register-form"
            onSubmit={[Function]}
>
            <div
                        className="input-container"
            >
                        <input
                                    className="register-input"
                                    name="name"
                                    onChange={[Function]}
                                    placeholder="NAME"
                                    type="text"
                                    value=""
                        />
                        <input
                                    className="register-input"
                                    name="email"
                                    onChange={[Function]}
                                    placeholder="EMAIL"
                                    type="text"
                                    value=""
                        />
                        <input
                                    className="register-input user-password-1"
                                    name="password1"
                                    onChange={[Function]}
                                    placeholder="PASSWORD"
                                    type="text"
                                    value=""
                        />
                        <input
                                    className="register-input user-password-2"
                                    name="password2"
                                    onChange={[Function]}
                                    placeholder="RETYPE PASSWORD"
                                    type="text"
                                    value=""
                        />
                        <button
                                    className="register-button"
                        >
                                    ENTER
                        </button>
            </div>
</form>,
          <p
            color="white"
>
            Alert message
</p>,
        ],
        "className": "register",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "GET STARTED",
            "className": "page-title",
          },
          "ref": null,
          "rendered": "GET STARTED",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="input-container"
>
              <input
                            className="register-input"
                            name="name"
                            onChange={[Function]}
                            placeholder="NAME"
                            type="text"
                            value=""
              />
              <input
                            className="register-input"
                            name="email"
                            onChange={[Function]}
                            placeholder="EMAIL"
                            type="text"
                            value=""
              />
              <input
                            className="register-input user-password-1"
                            name="password1"
                            onChange={[Function]}
                            placeholder="PASSWORD"
                            type="text"
                            value=""
              />
              <input
                            className="register-input user-password-2"
                            name="password2"
                            onChange={[Function]}
                            placeholder="RETYPE PASSWORD"
                            type="text"
                            value=""
              />
              <button
                            className="register-button"
              >
                            ENTER
              </button>
</div>,
            "className": "register-form",
            "onSubmit": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <input
                  className="register-input"
                  name="name"
                  onChange={[Function]}
                  placeholder="NAME"
                  type="text"
                  value=""
/>,
                <input
                  className="register-input"
                  name="email"
                  onChange={[Function]}
                  placeholder="EMAIL"
                  type="text"
                  value=""
/>,
                <input
                  className="register-input user-password-1"
                  name="password1"
                  onChange={[Function]}
                  placeholder="PASSWORD"
                  type="text"
                  value=""
/>,
                <input
                  className="register-input user-password-2"
                  name="password2"
                  onChange={[Function]}
                  placeholder="RETYPE PASSWORD"
                  type="text"
                  value=""
/>,
                <button
                  className="register-button"
>
                  ENTER
</button>,
              ],
              "className": "input-container",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "register-input",
                  "name": "name",
                  "onChange": [Function],
                  "placeholder": "NAME",
                  "type": "text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "register-input",
                  "name": "email",
                  "onChange": [Function],
                  "placeholder": "EMAIL",
                  "type": "text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "register-input user-password-1",
                  "name": "password1",
                  "onChange": [Function],
                  "placeholder": "PASSWORD",
                  "type": "text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "register-input user-password-2",
                  "name": "password2",
                  "onChange": [Function],
                  "placeholder": "RETYPE PASSWORD",
                  "type": "text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "ENTER",
                  "className": "register-button",
                },
                "ref": null,
                "rendered": "ENTER",
                "type": "button",
              },
            ],
            "type": "div",
          },
          "type": "form",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Alert message",
            "color": "white",
          },
          "ref": null,
          "rendered": "Alert message",
          "type": "p",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Register should match snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Register
    addUser={[Function]}
    history={
        Object {
            "push": [Function],
          }
    }
    loginUser={[Function]}
    user={
        Object {
            "email": "kindoffake@123.com",
            "id": 3,
            "name": "fred",
            "password1": "pw321",
            "password2": "pw321",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="page-title"
>
          GET STARTED
</h1>,
        <form
          className="register-form"
          onSubmit={[Function]}
>
          <div
                    className="input-container"
          >
                    <input
                              className="register-input"
                              name="name"
                              onChange={[Function]}
                              placeholder="NAME"
                              type="text"
                              value=""
                    />
                    <input
                              className="register-input"
                              name="email"
                              onChange={[Function]}
                              placeholder="EMAIL"
                              type="text"
                              value=""
                    />
                    <input
                              className="register-input user-password-1"
                              name="password1"
                              onChange={[Function]}
                              placeholder="PASSWORD"
                              type="text"
                              value=""
                    />
                    <input
                              className="register-input user-password-2"
                              name="password2"
                              onChange={[Function]}
                              placeholder="RETYPE PASSWORD"
                              type="text"
                              value=""
                    />
                    <button
                              className="register-button"
                    >
                              ENTER
                    </button>
          </div>
</form>,
        false,
      ],
      "className": "register",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "GET STARTED",
          "className": "page-title",
        },
        "ref": null,
        "rendered": "GET STARTED",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="input-container"
>
            <input
                        className="register-input"
                        name="name"
                        onChange={[Function]}
                        placeholder="NAME"
                        type="text"
                        value=""
            />
            <input
                        className="register-input"
                        name="email"
                        onChange={[Function]}
                        placeholder="EMAIL"
                        type="text"
                        value=""
            />
            <input
                        className="register-input user-password-1"
                        name="password1"
                        onChange={[Function]}
                        placeholder="PASSWORD"
                        type="text"
                        value=""
            />
            <input
                        className="register-input user-password-2"
                        name="password2"
                        onChange={[Function]}
                        placeholder="RETYPE PASSWORD"
                        type="text"
                        value=""
            />
            <button
                        className="register-button"
            >
                        ENTER
            </button>
</div>,
          "className": "register-form",
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                className="register-input"
                name="name"
                onChange={[Function]}
                placeholder="NAME"
                type="text"
                value=""
/>,
              <input
                className="register-input"
                name="email"
                onChange={[Function]}
                placeholder="EMAIL"
                type="text"
                value=""
/>,
              <input
                className="register-input user-password-1"
                name="password1"
                onChange={[Function]}
                placeholder="PASSWORD"
                type="text"
                value=""
/>,
              <input
                className="register-input user-password-2"
                name="password2"
                onChange={[Function]}
                placeholder="RETYPE PASSWORD"
                type="text"
                value=""
/>,
              <button
                className="register-button"
>
                ENTER
</button>,
            ],
            "className": "input-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "register-input",
                "name": "name",
                "onChange": [Function],
                "placeholder": "NAME",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "register-input",
                "name": "email",
                "onChange": [Function],
                "placeholder": "EMAIL",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "register-input user-password-1",
                "name": "password1",
                "onChange": [Function],
                "placeholder": "PASSWORD",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "register-input user-password-2",
                "name": "password2",
                "onChange": [Function],
                "placeholder": "RETYPE PASSWORD",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "ENTER",
                "className": "register-button",
              },
              "ref": null,
              "rendered": "ENTER",
              "type": "button",
            },
          ],
          "type": "div",
        },
        "type": "form",
      },
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="page-title"
>
            GET STARTED
</h1>,
          <form
            className="register-form"
            onSubmit={[Function]}
>
            <div
                        className="input-container"
            >
                        <input
                                    className="register-input"
                                    name="name"
                                    onChange={[Function]}
                                    placeholder="NAME"
                                    type="text"
                                    value=""
                        />
                        <input
                                    className="register-input"
                                    name="email"
                                    onChange={[Function]}
                                    placeholder="EMAIL"
                                    type="text"
                                    value=""
                        />
                        <input
                                    className="register-input user-password-1"
                                    name="password1"
                                    onChange={[Function]}
                                    placeholder="PASSWORD"
                                    type="text"
                                    value=""
                        />
                        <input
                                    className="register-input user-password-2"
                                    name="password2"
                                    onChange={[Function]}
                                    placeholder="RETYPE PASSWORD"
                                    type="text"
                                    value=""
                        />
                        <button
                                    className="register-button"
                        >
                                    ENTER
                        </button>
            </div>
</form>,
          false,
        ],
        "className": "register",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "GET STARTED",
            "className": "page-title",
          },
          "ref": null,
          "rendered": "GET STARTED",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="input-container"
>
              <input
                            className="register-input"
                            name="name"
                            onChange={[Function]}
                            placeholder="NAME"
                            type="text"
                            value=""
              />
              <input
                            className="register-input"
                            name="email"
                            onChange={[Function]}
                            placeholder="EMAIL"
                            type="text"
                            value=""
              />
              <input
                            className="register-input user-password-1"
                            name="password1"
                            onChange={[Function]}
                            placeholder="PASSWORD"
                            type="text"
                            value=""
              />
              <input
                            className="register-input user-password-2"
                            name="password2"
                            onChange={[Function]}
                            placeholder="RETYPE PASSWORD"
                            type="text"
                            value=""
              />
              <button
                            className="register-button"
              >
                            ENTER
              </button>
</div>,
            "className": "register-form",
            "onSubmit": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <input
                  className="register-input"
                  name="name"
                  onChange={[Function]}
                  placeholder="NAME"
                  type="text"
                  value=""
/>,
                <input
                  className="register-input"
                  name="email"
                  onChange={[Function]}
                  placeholder="EMAIL"
                  type="text"
                  value=""
/>,
                <input
                  className="register-input user-password-1"
                  name="password1"
                  onChange={[Function]}
                  placeholder="PASSWORD"
                  type="text"
                  value=""
/>,
                <input
                  className="register-input user-password-2"
                  name="password2"
                  onChange={[Function]}
                  placeholder="RETYPE PASSWORD"
                  type="text"
                  value=""
/>,
                <button
                  className="register-button"
>
                  ENTER
</button>,
              ],
              "className": "input-container",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "register-input",
                  "name": "name",
                  "onChange": [Function],
                  "placeholder": "NAME",
                  "type": "text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "register-input",
                  "name": "email",
                  "onChange": [Function],
                  "placeholder": "EMAIL",
                  "type": "text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "register-input user-password-1",
                  "name": "password1",
                  "onChange": [Function],
                  "placeholder": "PASSWORD",
                  "type": "text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "register-input user-password-2",
                  "name": "password2",
                  "onChange": [Function],
                  "placeholder": "RETYPE PASSWORD",
                  "type": "text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "ENTER",
                  "className": "register-button",
                },
                "ref": null,
                "rendered": "ENTER",
                "type": "button",
              },
            ],
            "type": "div",
          },
          "type": "form",
        },
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
